# text2sql

./: .gitignore  config.yml  main.py  pyproject.toml
postgres/: docker-compose.yml
src/: agent.py  config.py  db.py  graph.py  llm_backend.py  logger.py  tools.py  utils.py
src/agent/: graph.py  llm_backend.py  state.py  tools.py
src/cache/: postgres.py  query_embedding.py
src/prompts/: __init__.py  en.py  it.py  prompt_schema.py
